@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-57
+2013-12-22 Andy
+- acqiris: update comments for TdcDataV1.data() method
+
 Tag: V00-04-56
 2013-12-18 Matt
 - add Epix.ConfigV1,ElementV1 definitions
